--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="facebook-domain-verification" content="w0gldxtirxi4o3m76eup6o9xrfqdz2" />
+        <!-- Meta Pixel Code -->
         <!-- Meta Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -18,39 +20,24 @@
             fbq('track', 'PageView');
         </script>
     <!-- End Meta Pixel Code -->
+    <!-- End Meta Pixel Code -->
     </head>
     <body>
         <div>
-            <form id="form">
+            <!-- <form id="form">
                 <h1>Welcome !</h1><br>
                 <input type="text" name="test1" id="test1"><br>
                 <button type="submit">Submit</button>
-            </form>
+            </form> -->
+            <h2>*login ผ่านไลน์ แล้วอย่าลืมเพิ่ม line @ เพื่อรับเครดิตฟรีด้วยนะ</h2>
+            <button type="button" id="btnLine">Line Login</button>
         </div>
         <script src="../assets/js/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+        <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
         <script>
-            $('#form').submit((e) => {
-                e.preventDefault()
-                console.log('click')
-                fbq('track', 'CompleteRegistration', {
-                    'content_name' : 'submit form',
-                });
-
-                let input = $('#test1').val()
-
-                const data = {
-                    input : input
-                }
-
-                axios.post('/submitform', data)
-                .then((res) => {
-                    console.log(res.data.data)
-                })
-                .catch((err) => {
-                    console.log(err.data.data)
-                })
+            $('#btnLine').on('click', (e) => {
+                window.location.href='/linelogin'
             })
         </script>
 
